added fontawesome cdn

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css">
     <title>Club Cine</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
             <div class="middlebox">
                 <img src="img/historyfilm.jpg" alt="película-historica"/>
                 <div class="card">
-                    <h2>Hidden Figures</h2> 
+                    <h2>Hidden Figures</h2>
                     <button>+info</button>
                 </div>
             </div>
@@ -62,7 +63,7 @@
                     <p>Quod atque ut consequuntur et. Ut corrupti ipsa deleniti et. Voluptatem necessitatibus rerum exercitationem odio debitis ea odio soluta sed.</p>
                     <button>Ver más</button>
                 </article>
-             
+
                 <article>
                     <img src="https://source.unsplash.com/-OlnSnYJTu4/300x300" alt="old mill playhouse cinema">
                     <h3>rerum quibusdam amet</h3>
