made layout responsive with vh and %

--- a/Exercici 1/index.html
+++ b/Exercici 1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="container">
     <header>
         <h1></h1>
         <nav>
@@ -34,5 +35,6 @@
         </section>
     </main>
     <footer></footer>
+  </div>
 </body>
 </html>
