made level2 layout responsive

--- a/Exercici 2/index.html
+++ b/Exercici 2/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body> 
+<body>
+  <div class="container">
     <header>
         <h1>Club Cine</h1>
         <nav>
@@ -29,7 +30,7 @@
             <div class="middlebox">
                 <img src="img/historyfilm.jpg" alt="película-historica"/>
                 <div class="card">
-                    <h2>Hidden Figures</h2> 
+                    <h2>Hidden Figures</h2>
                     <button>+info</button>
                 </div>
             </div>
@@ -52,30 +53,30 @@
             <div class="left-side"></div>
             <div class="main">
                 <article>
-                    <img src="https://source.unsplash.com/CJyM6mth1ws/300x300" alt="bluebird cinema">
+                    <img src="https://source.unsplash.com/CJyM6mth1ws/150x150" alt="bluebird cinema">
                     <h3>nemo facere fugiat</h3>
                     <p>Numquam velit nesciunt occaecati explicabo. Aliquid voluptatem neque. Minima in qui est omnis impedit facilis. Amet dolor aperiam. Expedita quia aperiam quaerat occaecati.</p>
                     <button>Ver más</button>
                 </article>
 
                 <article>
-                    <img src="https://source.unsplash.com//_m4AJ-xGGjA/300x300" alt="gem cinema">
+                    <img src="https://source.unsplash.com//_m4AJ-xGGjA/150x150" alt="gem cinema">
                     <h3>repellat unde sint</h3>
                     <p>Quod atque ut consequuntur et. Ut corrupti ipsa deleniti et. Voluptatem necessitatibus rerum exercitationem odio debitis ea odio soluta sed.</p>
                     <button>Ver más</button>
                 </article>
-             
+
                 <article>
-                    <img src="https://source.unsplash.com/-OlnSnYJTu4/300x300" alt="old mill playhouse cinema">
+                    <img src="https://source.unsplash.com/-OlnSnYJTu4/150x150" alt="old mill playhouse cinema">
                     <h3>rerum quibusdam amet</h3>
-                    <p>Nesciunt sint ratione quis eum dolores. Dolorum sequi perspiciatis itaque. Facere accusamus voluptatem architecto voluptas tenetur consectetur cumque officiis. Omnis aperiam unde sapiente quasi possimus nobis error ea quasi.</p>
+                    <p>Nesciunt sint ratione quis eum dolores. Dolorum sequi perspiciatis itaque. Facere accusamus voluptatem architecto voluptas tenetur consectetur cumque officiis. </p>
                     <button>Ver más</button>
                 </article>
 
                 <article>
-                    <img src="https://source.unsplash.com/p0-vPMmLz8Y/300x300" alt="chicago cinema">
+                    <img src="https://source.unsplash.com/p0-vPMmLz8Y/150x150" alt="chicago cinema">
                     <h3>sed quae aut</h3>
-                    <p>Nesciunt sint ratione quis eum dolores. Dolorum sequi perspiciatis itaque. Facere accusamus voluptatem architecto voluptas tenetur consectetur cumque officiis. Omnis aperiam unde sapiente quasi possimus nobis error ea quasi.</p>
+                    <p>Nesciunt sint ratione quis eum dolores. Dolorum sequi perspiciatis itaque. Facere accusamus voluptatem architecto voluptas tenetur consectetur cumque officiis. </p>
                     <button>Ver más</button>
                 </article>
             </div>
@@ -89,5 +90,6 @@
         <p>© 2021 Club Cine. All rights reserved</p>
 
     </footer>
+  </div>
 </body>
 </html>
